--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "typst-preview",
   "displayName": "typst-preview",
   "description": "preview your typst document in instant",
-  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Enter-tainer/typst-preview-vscode"
+  },
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.77.0"
   },
