--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "typst-preview",
   "displayName": "typst-preview",
   "description": "preview your typst document in instant",
+  "publisher": "mgt19937",
   "repository": {
     "type": "git",
     "url": "https://github.com/Enter-tainer/typst-preview-vscode"
