--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -58,6 +58,7 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "yarn run compile && yarn run lint",
+    "package": "vsce package",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
   },
@@ -72,7 +73,7 @@
     "eslint": "^8.36.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {}
+    "typescript": "^4.9.5",
+    "@vscode/vsce": "^2.19.0"
+  }
 }
