--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -88,6 +88,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.2",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
@@ -101,5 +102,7 @@
     "mocha": "^10.2.0",
     "typescript": "^4.9.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "cross-spawn": "^7.0.3"
+  }
 }
