--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ bench = false
 doc = false
 
 [dependencies]
-typst = { git = "https://github.com/typst/typst.git", tag = "v0.5.0"}
-typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.5.0" }
+typst = "0.5.0"
+typst-library = "0.5.0"
+typst-ts-svg-exporter = "0.2"
+
 chrono = { version = "0.4", default-features = false, features = [
   "clock",
   "std",
@@ -39,6 +41,12 @@ log = "0.4.17"
 serde_json = "1.0.95"
 futures = "0.3.28"
 serde = "1.0.159"
+
+[patch.crates-io]
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
+typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "90bfba7b94b8c1db5149479398a6e70e44130404", package = "typst-ts-svg-exporter"}
+
 
 [build-dependencies]
 clap = { version = "4.2.1", features = ["derive", "string"] }
