--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ siphasher = "0.3"
 walkdir = "2"
 clap = { version = "4.2.1", features = ["derive"] }
 open = "4.0.1"
-tokio = {version = "1.27.0", features = ["full"]}
+tokio = { version = "1.27.0", features = ["full"] }
 tokio-tungstenite = "0.19.0"
 tiny-skia = "0.9.0"
 env_logger = "0.10.0"
@@ -46,8 +46,11 @@ serde = "1.0.159"
 [patch.crates-io]
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
 typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "90bfba7b94b8c1db5149479398a6e70e44130404", package = "typst-ts-svg-exporter"}
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "90bfba7b94b8c1db5149479398a6e70e44130404", package = "typst-ts-core"}
+# typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "90bfba7b94b8c1db5149479398a6e70e44130404", package = "typst-ts-svg-exporter"}
+# typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "90bfba7b94b8c1db5149479398a6e70e44130404", package = "typst-ts-core"}
+
+typst-ts-svg-exporter = { path = "../../rust/typst.ts/exporter/svg" }
+typst-ts-core = { path = "../../rust/typst.ts/core" }
 
 
 [build-dependencies]
