--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,11 +46,11 @@ serde = "1.0.159"
 [patch.crates-io]
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
 typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
-# typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "90bfba7b94b8c1db5149479398a6e70e44130404", package = "typst-ts-svg-exporter"}
-# typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "90bfba7b94b8c1db5149479398a6e70e44130404", package = "typst-ts-core"}
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "1647127edba0e834f58447cd1008ef6c59f22426", package = "typst-ts-svg-exporter"}
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "1647127edba0e834f58447cd1008ef6c59f22426", package = "typst-ts-core"}
 
-typst-ts-svg-exporter = { path = "../../rust/typst.ts/exporter/svg" }
-typst-ts-core = { path = "../../rust/typst.ts/core" }
+# typst-ts-svg-exporter = { path = "../../rust/typst.ts/exporter/svg" }
+# typst-ts-core = { path = "../../rust/typst.ts/core" }
 
 
 [build-dependencies]
