--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -79,7 +79,7 @@
     }
   },
   "scripts": {
-    "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && mkdir -p ./out/frontend && cp -r ../frontend/dist/* ./out/frontend",
+    "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && rimraf ./out/frontend/ && npx copyfiles -u=3 ../frontend/dist/**/* ./out/frontend/",
     "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./ && yarn run build:frontend",
     "watch": "tsc -watch -p ./",
@@ -98,9 +98,11 @@
     "@typescript-eslint/parser": "^5.56.0",
     "@vscode/test-electron": "^2.3.0",
     "@vscode/vsce": "^2.19.0",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.36.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
+    "rimraf": "^5.0.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
