--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -79,7 +79,7 @@
     }
   },
   "scripts": {
-    "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && rimraf ./out/frontend/ && npx copyfiles -u=3 ../frontend/dist/**/* ./out/frontend/",
+    "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && rimraf ./out/frontend/ && copyfiles -u=3 ../frontend/dist/**/* ./out/frontend/",
     "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./ && yarn run build:frontend",
     "watch": "tsc -watch -p ./",
@@ -103,7 +103,7 @@
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "rimraf": "^5.0.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "cross-spawn": "^7.0.3"
