--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -79,7 +79,7 @@
     }
   },
   "scripts": {
-    "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && rimraf ./out/frontend/ && copyfiles -u=3 ../frontend/dist/** ./out/frontend/ && copyfiles -u=3 ../frontend/dist/**/* ./out/frontend/",
+    "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && rimraf ./out/frontend/ && cpr ../frontend/dist/ ./out/frontend/",
     "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./ && yarn run build:frontend",
     "watch": "tsc -watch -p ./",
@@ -98,7 +98,6 @@
     "@typescript-eslint/parser": "^5.56.0",
     "@vscode/test-electron": "^2.3.0",
     "@vscode/vsce": "^2.19.0",
-    "copyfiles": "^2.4.1",
     "eslint": "^8.36.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
@@ -106,6 +105,7 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "cpr": "^3.0.1",
     "cross-spawn": "^7.0.3"
   }
 }
