--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -94,6 +94,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@types/vscode": "^1.77.0",
+    "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vscode/test-electron": "^2.3.0",
@@ -106,6 +107,7 @@
   },
   "dependencies": {
     "cpr": "^3.0.1",
-    "cross-spawn": "^7.0.3"
+    "cross-spawn": "^7.0.3",
+    "ws": "^8.13.0"
   }
 }
