--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -32,6 +32,12 @@
         "title": "Typst Preview: Preview current file",
         "description": "Launch typst-ws server",
         "icon": "$(open-preview)"
+      },
+      {
+        "command": "typst-preview.browser",
+        "title": "Typst Preview: Preview current file in browser",
+        "description": "Launch typst-ws server and open the preview in your browser",
+        "icon": "$(open-preview)"
       }
     ],
     "menus": {
@@ -90,9 +96,11 @@
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
+    "@types/express": "^4.17.17",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/openurl": "^1.0.0",
     "@types/vscode": "^1.77.0",
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
@@ -108,6 +116,8 @@
   "dependencies": {
     "cpr": "^3.0.1",
     "cross-spawn": "^7.0.3",
+    "express": "^4.18.2",
+    "openurl": "^1.1.1",
     "ws": "^8.13.0"
   }
 }
