--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ same-file = "1"
 siphasher = "0.3"
 walkdir = "2"
 clap = { version = "4.2.1", features = ["derive"] }
-open = "4.0.1"
+open = "5.0.0"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-tungstenite = "0.19.0"
 tiny-skia = "0.9.0"
@@ -42,6 +42,8 @@ log = "0.4.17"
 serde_json = "1.0.95"
 futures = "0.3.28"
 serde = "1.0.159"
+actix-web = { version = "4.3.1", features = [] }
+actix-files = { version = "0.6.2", features = [] }
 
 [patch.crates-io]
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
