--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,8 +47,8 @@ actix-web = { version = "4.3.1", features = [] }
 actix-files = { version = "0.6.2", features = [] }
 
 [patch.crates-io]
-typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
-typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.5.0" }
+typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.5.0" }
 typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.2.3", package = "typst-ts-svg-exporter" }
 typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.2.3", package = "typst-ts-core" }
 typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.2.3", package = "typst-ts-compiler" }
