--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -103,7 +103,7 @@
   },
   "scripts": {
     "build:frontend": "cd ../frontend && yarn run build && cd ../vscode && rimraf ./out/frontend/ && cpr ../frontend/dist/ ./out/frontend/",
-    "vscode:prepublish": "yarn run compile",
+    "vscode-prepublish": "yarn run compile",
     "compile": "tsc -p ./ && cpr package.json ./out/package.json && yarn run build:frontend",
     "watch": "tsc -watch -p ./",
     "pretest": "yarn run compile && yarn run lint",
