--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ bench = false
 doc = false
 
 [dependencies]
-typst = "0.5.0"
-typst-library = "0.5.0"
+typst = "0.6.0"
+typst-library = "0.6.0"
 typst-ts-svg-exporter = "0.2"
 typst-ts-core = "0.2"
 typst-ts-compiler = "0.2"
@@ -47,15 +47,17 @@ actix-web = { version = "4.3.1", features = [] }
 actix-files = { version = "0.6.2", features = [] }
 
 [patch.crates-io]
-typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.5.0" }
-typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.5.0" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.2.3", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.2.3", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.2.3", package = "typst-ts-compiler" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
+typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "31ee537ea0276ad3f3897dea80f5aba82029daa7", package = "typst-ts-svg-exporter" }
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "31ee537ea0276ad3f3897dea80f5aba82029daa7", package = "typst-ts-core" }
+typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "31ee537ea0276ad3f3897dea80f5aba82029daa7", package = "typst-ts-compiler" }
 
-# typst-ts-svg-exporter = { path = "../../rust/typst.ts/exporter/svg" }
-# typst-ts-compiler = { path = "../../rust/typst.ts/compiler" }
-# typst-ts-core = { path = "../../rust/typst.ts/core" }
+# typst = { path = "../typst" }
+# typst-library = { path = "../typst/library" }
+# typst-ts-svg-exporter = { path = "../typst.ts/exporter/svg" }
+# typst-ts-compiler = { path = "../typst.ts/compiler" }
+# typst-ts-core = { path = "../typst.ts/core" }
 
 [build-dependencies]
 clap = { version = "4.2.1", features = ["derive", "string"] }
