--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,15 +49,15 @@ actix-files = { version = "0.6.2", features = [] }
 [patch.crates-io]
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "5a2a2a2f24a80a2b8bb211862348c29b92f97736" }
 typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "5a2a2a2f24a80a2b8bb211862348c29b92f97736" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "66a19446f2f6bce5faa1e4b6e611acc0c76668d8", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "66a19446f2f6bce5faa1e4b6e611acc0c76668d8", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "66a19446f2f6bce5faa1e4b6e611acc0c76668d8", package = "typst-ts-compiler" }
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "87b1c970c9c2aacb644d552ecbecf93a9b9f18f9", package = "typst-ts-svg-exporter" }
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "87b1c970c9c2aacb644d552ecbecf93a9b9f18f9", package = "typst-ts-core" }
+typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "87b1c970c9c2aacb644d552ecbecf93a9b9f18f9", package = "typst-ts-compiler" }
 
-# typst = { path = "../typst" }
-# typst-library = { path = "../typst/library" }
-# typst-ts-svg-exporter = { path = "../typst.ts/exporter/svg" }
-# typst-ts-compiler = { path = "../typst.ts/compiler" }
-# typst-ts-core = { path = "../typst.ts/core" }
+# typst = { path = "../../rust/typst/crates/typst" }
+# typst-library = { path = "../../rust/typst/crates/typst-library" }
+# typst-ts-svg-exporter = { path = "../../rust/typst.ts/exporter/svg" }
+# typst-ts-compiler = { path = "../../rust/typst.ts/compiler" }
+# typst-ts-core = { path = "../../rust/typst.ts/core" }
 
 [build-dependencies]
 clap = { version = "4.2.1", features = ["derive", "string"] }
