--- a/addons/frontend/package.json
+++ b/addons/frontend/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-singlefile": "^0.13.5",
+    "vite-plugin-wasm": "^3.2.2",
     "vitest": "^0.32.2"
   }
 }
