--- a/addons/frontend/package.json
+++ b/addons/frontend/package.json
@@ -8,7 +8,12 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "link:local": "yarn link @myriaddreamin/typst.ts @myriaddreamin/typst-ts-renderer"
+  },
+  "dependencies": {
+    "@myriaddreamin/typst.ts": "0.3.1-rc1",
+    "@myriaddreamin/typst-ts-renderer": "0.3.1-rc1"
   },
   "devDependencies": {
     "typescript": "^5.0.2",
