--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,8 +43,7 @@ log = "0.4.17"
 serde_json = "1.0.95"
 futures = "0.3.28"
 serde = "1.0.159"
-actix-web = { version = "4.3.1", features = [] }
-actix-files = { version = "0.6.2", features = [] }
+hyper = { version = "0.14", features = ["full"] }
 
 [patch.crates-io]
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "5a2a2a2f24a80a2b8bb211862348c29b92f97736" }
