--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,21 +37,21 @@
 			"windows": {
 				"command": "cp",
 				"args": [
-					"${workspaceFolder}\\target\\release\\typst-ws.exe",
+					"${workspaceFolder}\\target\\release\\typst-preview.exe",
 					"${workspaceFolder}\\addons\\vscode\\out\\"
 				]
 			},
 			"linux": {
 				"command": "cp",
 				"args": [
-					"${workspaceFolder}/target/release/typst-ws",
+					"${workspaceFolder}/target/release/typst-preview",
 					"${workspaceFolder}/addons/vscode/out/"
 				]
 			},
 			"osx": {
 				"command": "cp",
 				"args": [
-					"${workspaceFolder}/target/release/typst-ws",
+					"${workspaceFolder}/target/release/typst-preview",
 					"${workspaceFolder}/addons/vscode/out/"
 				]
 			}
