--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,15 +27,15 @@ jobs:
             rust-target: aarch64-pc-windows-msvc
             platform: win32
             arch: arm64
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             rust-target: x86_64-unknown-linux-gnu
             platform: linux
             arch: x64
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             rust-target: aarch64-unknown-linux-gnu
             platform: linux
             arch: arm64
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             rust-target: arm-unknown-linux-gnueabihf
             platform: linux
             arch: armhf
