--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,9 @@ env_logger = "0.10.0"
 log = "0.4.17"
 serde_json = "1.0.95"
 futures = "0.3.28"
-serde = "1.0.159"
+# https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372
+# <= 1.0.171 due to serde-rs/serde#2538
+serde = { version = ">= 1.0.126, <= 1.0.171" }
 hyper = { version = "0.14", features = ["full"] }
 
 [patch.crates-io]
