--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -98,6 +98,7 @@
           ],
           "default": "onSelectionChange",
           "enumDescriptions": [
+            "Disable automatic scroll sync",
             "Scroll preview to current cursor position when selection changes"
           ]
         },
