--- a/addons/frontend/package.json
+++ b/addons/frontend/package.json
@@ -12,8 +12,9 @@
     "link:local": "yarn link @myriaddreamin/typst.ts @myriaddreamin/typst-ts-renderer"
   },
   "dependencies": {
-    "@myriaddreamin/typst.ts": "0.3.2-rc2",
-    "@myriaddreamin/typst-ts-renderer": "0.3.2-rc2"
+    "@myriaddreamin/typst.ts": "0.4.0-rc2",
+    "@myriaddreamin/typst-ts-renderer": "0.4.0-rc2",
+    "@myriaddreamin/typst-ts-web-compiler": "0.4.0-rc2"
   },
   "devDependencies": {
     "typescript": "^5.0.2",
