--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ once_cell = "1"
 same-file = "1"
 siphasher = "0.3"
 walkdir = "2"
-clap = { version = "4.2.1", features = ["derive"] }
+clap = { version = "4.2.4", features = ["derive", "env"] }
 open = "5.0.0"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-tungstenite = "0.19.0"
