--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -38,7 +38,7 @@ jobs:
           sudo cp typst-book-x86_64-unknown-linux-gnu/bin/typst-book /usr/bin/typst-book
       - name: Build Book
         run: |
-          typst-book build --font-path assets/fonts --path-to-root /typst-preview/ -w docs -d ./dist docs 
+          typst-book build --font-path assets/fonts --path-to-root /typst-preview/ -w . -d ./dist docs 
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
