--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Enter-tainer/typst-preview"
   },
-  "version": "0.7.3",
+  "version": "0.7.4",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -106,7 +106,7 @@
         "typst-preview.partialRendering": {
           "description": "Only render visible part of the document. This can improve performance but still being experimental.",
           "type": "boolean",
-          "default": false
+          "default": true
         }
       }
     }
