--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -141,6 +141,7 @@
   "dependencies": {
     "cpr": "^3.0.1",
     "cross-spawn": "^7.0.3",
+    "vscode-variables": "^0.1.3",
     "ws": "^8.13.0"
   }
 }
