--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,9 +50,9 @@ hyper = { version = "0.14", features = ["full"] }
 [patch.crates-io]
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "76b8e564baa501c7f3f693a45f7658735b89f7d1" }
 typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "76b8e564baa501c7f3f693a45f7658735b89f7d1" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "26394920b723f0fa905a92ff566b289f6c191b6f", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "26394920b723f0fa905a92ff566b289f6c191b6f", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "26394920b723f0fa905a92ff566b289f6c191b6f", package = "typst-ts-compiler" }
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "666813c85e3b1da64adbad519ecbb66929d7a1c7", package = "typst-ts-svg-exporter" }
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "666813c85e3b1da64adbad519ecbb66929d7a1c7", package = "typst-ts-core" }
+typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "666813c85e3b1da64adbad519ecbb66929d7a1c7", package = "typst-ts-compiler" }
 
 # typst = { path = "../../rust/typst/crates/typst" }
 # typst-library = { path = "../../rust/typst/crates/typst-library" }
@@ -75,3 +75,8 @@ default = ["embed-fonts"]
 # and additionally New Computer Modern for text
 # into the binary.
 embed-fonts = []
+
+[profile.rel_dev]
+inherits = "release"
+debug = true
+opt-level = 3
