--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ bench = false
 doc = false
 
 [dependencies]
-typst = "0.7.0"
-typst-library = "0.7.0"
-typst-ts-svg-exporter = "0.4.0-rc2"
-typst-ts-core = "0.4.0-rc2"
-typst-ts-compiler = "0.4.0-rc2"
+typst = "0.8.0"
+typst-library = "0.8.0"
+typst-ts-svg-exporter = "0.4.0-rc3"
+typst-ts-core = "0.4.0-rc3"
+typst-ts-compiler = "0.4.0-rc3"
 
 chrono = { version = "0.4", default-features = false, features = [
   "clock",
@@ -27,8 +27,8 @@ codespan-reporting = "0.11"
 comemo = "0.3"
 dirs = "5"
 elsa = "1.7"
-memmap2 = "0.5"
-notify = "5"
+memmap2 = "0.7"
+notify = "6"
 once_cell = "1"
 same-file = "1"
 siphasher = "0.3"
@@ -36,23 +36,24 @@ walkdir = "2"
 clap = { version = "4.2.4", features = ["derive", "env"] }
 open = "5.0.0"
 tokio = { version = "1.27.0", features = ["full"] }
-tokio-tungstenite = "0.19.0"
-tiny-skia = "0.9.0"
+tokio-tungstenite = "0.20.0"
+tiny-skia = "0.10.0"
 env_logger = "0.10.0"
 log = "0.4.17"
 serde_json = "1.0.95"
 futures = "0.3.28"
 # https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372
 # <= 1.0.171 due to serde-rs/serde#2538
-serde = { version = ">= 1.0.126, <= 1.0.171" }
+serde = "1.0.188"
 hyper = { version = "0.14", features = ["full"] }
 
 [patch.crates-io]
-typst = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "706d64f9ab77073a31e39653b1ed5bbbbaf204ea" }
-typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "706d64f9ab77073a31e39653b1ed5bbbbaf204ea" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "3ba125d8794cc0d3e61269beeab88d602f92d673", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "3ba125d8794cc0d3e61269beeab88d602f92d673", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "3ba125d8794cc0d3e61269beeab88d602f92d673", package = "typst-ts-compiler" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
+typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
+typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", rev = "c7e91e216310d5c8dca3eee8a23a64b3ede99e15" }
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-svg-exporter" }
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-core" }
+typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "ed6390702c8e7373164115a41e2d9407fb4a04bd", package = "typst-ts-compiler" }
 
 # typst = { path = "../../rust/typst/crates/typst" }
 # typst-library = { path = "../../rust/typst/crates/typst-library" }
@@ -75,3 +76,8 @@ default = ["embed-fonts"]
 # and additionally New Computer Modern for text
 # into the binary.
 embed-fonts = []
+
+[profile.rel_dev]
+inherits = "release"
+debug = true
+opt-level = 3
